# mls

Core/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.18eb755  CMakeLists.txt.user.67857b0  Core.cbp  Makefile  cmake_install.cmake  mls_automoc.cpp  mls_config.sqlite  moc_gl_source.cpp  moc_gui_config.cpp  moc_gui_encoder.cpp  moc_gui_login.cpp  moc_gui_main.cpp  moc_gui_surface_settings.cpp  moc_gui_updater.cpp  moc_ichannel.cpp  moc_iencoder.cpp  moc_irender_widget.cpp  moc_isurface.cpp  moc_opengl_render_widget.cpp  moc_opengl_surface.cpp  moc_read_pipe.cpp  moc_rtmp_proxy.cpp  moc_source.cpp  qrc_mediaquicksync.cpp  qrc_mediaquicksync.cxx  scene_fragment.glsl  scene_vertex.glsl  surface_fragment.glsl  tr_eng.ts  tr_rus.ts  ui_mqs_configuration.h  ui_mqs_encoder.h  ui_mqs_login.h  ui_mqs_main.h  ui_mqs_surface_settings.h  ui_mqs_transport.h  ui_mqs_update.h  update_tr.bat
Core/config/: global.cfg  scenes.cfg
Core/src/: main_mls.cpp
Core/src/channel/: ichannel.cpp  ichannel.h  local_recording.cpp  local_recording.h  read_pipe.cpp  rtmp_channel.cpp  rtmp_channel.h  rtmp_proxy.cpp  write_pipe.cpp  write_pipe.h
Core/src/encoder/: iencoder.cpp  iencoder.h
Core/src/global/: default.sql  escape_call_server.cpp  escape_call_server.h  global.cpp  global.h  json.cpp  json_value.cpp  json_value.h  plugin.cpp  plugin.h  ring_buffer.cpp  runtime.cpp  runtime.h  settings.cpp  settings.h  smart_ptr.h  value.h
Core/src/gui/: gui_channel.cpp  gui_channel.h  gui_config.cpp  gui_config.h  gui_encoder.cpp  gui_encoder.h  gui_login.cpp  gui_login.h  gui_main.cpp  gui_main.h  gui_main_scene.cpp  gui_main_source.cpp  gui_surface_settings.cpp  gui_surface_settings.h  gui_updater.cpp  gui_updater.h
Core/src/render/: glsl.h  irender_widget.cpp  irender_widget.h  isurface.cpp  isurface.h  opengl_render_widget.cpp  opengl_render_widget.h  opengl_surface.cpp  opengl_surface.h
Core/src/resources/: mediaquicksync.qrc
Core/src/source/: gl_source.cpp  gl_source.h  icap.cpp  icap.h  source.cpp  source.h
Core/src/ui/: mqs_configuration.ui  mqs_encoder.ui  mqs_login.ui  mqs_main.ui  mqs_surface_settings.ui  mqs_transport.ui  mqs_update.ui
Core/translations/: English.ts  Russian.qm  Russian.ts  Ukrainian.qm  Ukrainian.ts
DXOverlaySource/: DXOverlaySource.sln
DXOverlaySource/DXOverlaySource/: DXOverlaySource.cpp  DXOverlaySource.h  DXOverlaySource.vcxproj  DXOverlaySource.vcxproj.filters  ReadMe.txt  global.h  ring_buffer.h  source_export.cpp  source_export.h  stdafx.cpp
DXOverlaySource/DXOverlaySource/Debug/: CL.read.1.tlog  CL.write.1.tlog  DXOverlaySource.lastbuildstate  DXOverlaySource.write.1.tlog  DXOverlaySource_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
DXOverlaySource/Debug/: DXOverlaySource.exp  DXOverlaySource.ilk  DXOverlaySource.lib
DirectShowSource/: DirectShowCapture.sln
DirectShowSource/Debug/: DirectShowCapture.exp  DirectShowCapture.ilk  DirectShowCapture.lib
DirectShowSource/DirectShowDLL/: DSCapture.cpp  DSCapture.h  DirectShowDLL.vcxproj  DirectShowDLL.vcxproj.filters  ReadMe.txt  dllmain.cpp  global.h  ring_buffer.h  source_export.cpp  source_export.h  video_capture_ds.cpp  video_capture_ds.h
DirectShowSource/DirectShowDLL/Debug/: CL.read.1.tlog  CL.write.1.tlog  DirectShowCapture.lastbuildstate  DirectShowCapture.write.1.tlog  DirectShowCapture_manifest.rc  DirectShowDLL.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
DirectShowSource/DirectShowDLL/Release/: CL.read.1.tlog  CL.write.1.tlog  (+9 more)
DirectShowSource/Release/: libmlsdirectshowsource.exp  libmlsdirectshowsource.lib
custum_rtmp_plugin/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.67857b0  Makefile  cmake_install.cmake  custom_rtmp_plugin.cbp  mlscustomrtmpchannel_automoc.cpp  moc_custom_rtmp_channel.cpp  moc_gui_channel.cpp  moc_read_pipe.cpp  moc_rtmp_proxy.cpp  ui_custom_rtmp_channel.h
custum_rtmp_plugin/src/: channel_export.cpp  channel_export.h  custom_rtmp_channel.cpp  custom_rtmp_channel.h  escape_call_client.cpp  escape_call_client.h  read_pipe.h  rtmp_proxy.cpp  rtmp_proxy.h  write_pipe.cpp
custum_rtmp_plugin/src/global/: global.h  json.h  ring_buffer.h  settings.cpp  settings.h
custum_rtmp_plugin/src/gui/: custom_rtmp_channel.ui  gui_channel.cpp  gui_channel.h
libx264_plugin/: CMakeCache.txt  CMakeLists.txt  Libx264Encoder.cpp  Libx264Encoder.h  Makefile  cmake_install.cmake  encoder_export.cpp  encoder_export.h  global.h  rgb2yuv.cpp  x264_plugin.cbp
libx264_plugin/mt/: periodic_thread_caller.cpp  periodic_thread_caller.h  ring_buffer.h  singleton.h  thread.cpp  thread.h  thread_controller.h  thread_core.cpp  thread_core.h
mls_inc/: escape_call.h
